update - OSOAA 2.0