@@ -29,13 +29,13 @@ public class DALPropertiesManager implements IDALPropertiesManager {
 		{
 			if(c.isAssignableFrom(Double.class))
 			{
-				Double d = new Double("0.0");
+				Double d = Double.valueOf("0.0");
 				return c.cast(d);
 			}
 			
 			if(c.isAssignableFrom(Integer.class))
 			{
-				Integer d = new Integer("0");
+				Integer d = Integer.valueOf("0");
 				return c.cast(d);
 			}
 			
